Changing my mind post

--- a/_posts/2025/2025-03-23-a-new-blog.md
+++ b/_posts/2025/2025-03-23-a-new-blog.md
@@ -13,6 +13,6 @@ Anyway, this is the post I assume no one will read but you have to kick it off s
 
 Until then don't go empty handed, here's a page from my sketchbook full of some... folks.
 
-![image](\images\2025\sketchbook_2532025.jpg "A page of sketches of some wasteland looking warriors")
+![image](/images/2025/sketchbook_2532025.jpg "A page of sketches of some wasteland looking warriors")
 
 -Callie
