--- a/_posts/2025/2025-03-23-a-new-blog.md
+++ b/_posts/2025/2025-03-23-a-new-blog.md
@@ -1,6 +1,6 @@
 ---
 title: A new blog
-category: Personal Stuff
+category: Personal
 ---
 
 I made myself a new blog! I wanted somewhere I could share longer form content about some things, mostly around tabletop games, making miniatures, painting, that kind of thing. The more things change online the more I believe in creating the small internet, in removing myself as much as possible from large centralised sites that often don't have my best interests at heart. This is mostly a personal thing and not a judgement on anyone else's choices.
